[gd_scene load_steps=10 format=3 uid="uid://c0rflr1tx0iwi"]

[ext_resource type="Script" path="res://Scripts/GUI/gui.gd" id="1_sibb5"]
[ext_resource type="Script" path="res://Scenes/GUI/BatteryBar.gd" id="2_pjv6c"]
[ext_resource type="FontFile" uid="uid://c05igqgks2yox" path="res://Menus/Fonts/Kenney Mini Square.ttf" id="3_lfl3n"]

[sub_resource type="Gradient" id="Gradient_kob2b"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.666667, 1)
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 0.0627451, 0, 0, 0, 0.552941)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4jbtt"]
gradient = SubResource("Gradient_kob2b")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1.045, 0)

[sub_resource type="Gradient" id="Gradient_pp7is"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0, 0, 0, 0.360784)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rcfol"]
gradient = SubResource("Gradient_pp7is")
width = 296
height = 40

[sub_resource type="Gradient" id="Gradient_xf5s3"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.471389, 0.94903, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_s4kas"]
gradient = SubResource("Gradient_xf5s3")
width = 296
height = 40

[node name="GUI" type="Control" node_paths=PackedStringArray("health_bar")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sibb5")
health_bar = NodePath("MarginContainer/BatteryBar")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
texture = SubResource("GradientTexture2D_4jbtt")

[node name="E2Set" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 43.0
offset_top = -137.0
offset_right = 133.0
offset_bottom = -47.0
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="E2Set"]
texture_filter = 1
layout_mode = 2

[node name="E2Interact" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 43.0
offset_top = -137.0
offset_right = 133.0
offset_bottom = -47.0
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="E2Interact"]
texture_filter = 1
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -152.0
offset_top = -80.0
offset_right = 144.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.009, 1.009)

[node name="BatteryBar" type="TextureProgressBar" parent="MarginContainer"]
layout_mode = 2
value = 50.0
texture_under = SubResource("GradientTexture2D_rcfol")
texture_progress = SubResource("GradientTexture2D_s4kas")
script = ExtResource("2_pjv6c")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -152.0
offset_top = -120.0
offset_right = 151.525
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="Label_Time" type="RichTextLabel" parent="MarginContainer2/HBoxContainer"]
texture_filter = 3
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/normal_font = ExtResource("3_lfl3n")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "90S
"
fit_content = true
autowrap_mode = 0
shortcut_keys_enabled = false

[node name="subLabel_Time" type="RichTextLabel" parent="MarginContainer2/HBoxContainer"]
texture_filter = 3
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/normal_font = ExtResource("3_lfl3n")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[shake rate=20.0 level=5 connected=1]For meteorites[/shake]"
fit_content = true
autowrap_mode = 0
shortcut_keys_enabled = false

[node name="Combat_to_Menu" type="Control" parent="."]
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="Pressed" type="RichTextLabel" parent="Combat_to_Menu"]
texture_filter = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -616.0
offset_top = 312.0
offset_right = -464.0
offset_bottom = 344.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("3_lfl3n")
theme_override_font_sizes/normal_font_size = 22
bbcode_enabled = true
text = "[- Press Esc"
autowrap_mode = 0
shortcut_keys_enabled = false
